# mag-bridge

./: .gitignore  .gitmodules  .mcp-depreacted.json  .mcp.json  1  DEVELOPMENT.md  LICENSE  MIGRATION.md  Makefile  QUICKSTART.md  README.md  TEST_REPORT.md  TOOLBOX.md  asdasd.sh  dev-fullstack.sh  dev.sh  mag-bridge.sln  magbridge-config.json  package-lock.json  package.json  prompt.md  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  tox.toml
.claude/: .claudeignore  .mcp.json  CLAUDE.md  settings.json
.claude/commands/: prime.md  start.md
.claude/context/: MEMORY.md  PLAN.md  mcpmenago.md  phoenix.md  rdkit-mcp.md  renderer-refactor.md  status.md  substruct-matcher-architecture.md  substruct-matching.md  substruct_matcher_refactor_plan.md
.claude/docs/: 2025_kpwydra_chiral_phenolic_macrocyclic_metal_complexes.json  2025_kpwydra_chiral_phenolic_macrocyclic_metal_complexes.md  sample.json  sample.md
.claude/hooks/: lint.py  play_sound.py
.claude/scripts/: build_repomix_indexes.py  md_to_json.py  mineru.json  pdf_to_md.py  setup-grype.sh  ui-ss.js
.claude/templates/: security-report.tmpl
.devcontainer/: Dockerfile  README.md  devcontainer-lock.json  devcontainer.json  package-lock.json  package.json  postCreateCommand.sh  updateContentCommand.sh
.devcontainer/dotfiles/: .p10k.zsh  .shell_utils
.devcontainer/scripts/: cbm-ui.sh
.devcontainer/tests/: test_ai_isolation.py
.github/scripts/: messages.py  notify.py  release_summary_hook.py
.github/workflows/: assign-on-pr.yaml  auto-author-on-pr.yaml  build-on-release.yaml  notify-on-merge-to-master.yaml  notify-on-pr.yaml  on-discord-issue-closed.yaml  on-discord-issue-opened.yaml  on-pr-notify.yaml  test-on-pr.yaml  tests.yaml
.trunk/: trunk.yaml
backend/: __init__.py  base.py  config.py  main.py  routes.py
backend/routes/: __init__.py  example.py  experiment.py  files.py  math.py  submit.py
backend/schemas/: calculations.py
data/sdf/: 2-methylpropan-2-olate.sdf  2-methylpropanol.sdf  AcO-.sdf  AsO33-.sdf  (+15 more)
docs/: substruct-matcher-report.md
documentation/: APPENDIX-1.md
electron/: .gitignore  README.md  dev.sh  logging.js  main.js  package-lock.json  package.json  preload.js
frontend/: README.md  _theme-colors.scss  angular.json  app-config.js  app-settings.js  index.html  logging.js  main.js  package-lock.json  package.json  preload.js  tsconfig.app.json
installer/: runtime.sh
mcp/: rdkit_mcp.py
mcpmenago/: README.md  __init__.py  cli.py  index_builder.py  issues.md  mcpmenago.json  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  scm_version.py  server.py  tox.ini  venv_check.py  version.py
mcpmenago/mcpmenago/: __init__.py  cli.py  learn.py  models.py  paths.py  server.py  store.py
mcpmenago/mcpmenago/research/mcpmenago/json/Citation-Grounded Code Comprehension_Arafat/hybrid_auto/: structural.json
mcpmenago/mcpmenago/research/mcpmenago/md/Citation-Grounded Code Comprehension_Arafat/hybrid_auto/: index.md
mcpmenago/research/: MCP_SERVERS.md
mcpmenago/scripts/: analyze_index.py
mcpmenago/tests/: conftest.py  test_cli.py  test_index_builder.py  test_models.py  test_paths.py  test_settings.py  test_store.py
mcpmenago/tests/reports/: TEST_REPORT_py3.12.html
mcpmenago/tools/: __init__.py  md_to_json.py  mineru.json  pdf_to_md.py
notebooks/: canonical-smiles.ipynb  pubchem-tool.ipynb  pubchem.ipynb  rdkit-fail.ipynb  rdkit-images.ipynb  rdkit-old-dictionary.ipynb  rdkit-queries.ipynb  rdkit-sandbox-kpwydra copy.ipynb  rdkit-sandbox-kpwydra.ipynb  rdkit-sandbox.ipynb  rdkit-substruct-match.ipynb  substruct-matching.ipynb
pubchem_search/: browser.py
scripts/: environment.py
src/: __init__.py  constants.py  diamag.py  element.py  forbidden_bonds.py  loader.py  overlap_rules.py
tests/: __init__.py  conftest.py
(+641 files in other folders)
