[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpmenago"
authors = [{ name = "MagBridge", email = "magbridge.dev@gmail.com" }]
license = "Apache-2.0"
keywords = [
    "local mcp documentation server",
    "local mcp server",
    "mcp server",
    "local mcp",
    "documentation",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version", "dependencies"]
requires-python = ">=3.12"

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "scm_version:get_dynamic_version"

[tool.setuptools]
package-dir = { "mcpmenago" = "mcpmenago" }
packages = ["mcpmenago"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q --tb=no --no-summary"
testpaths = ["tests"]

[tool.pyright]
include = ["backend", "src"]
venvPath = "."
venv = ".venv"
reportMissingImports = false
reportMissingModuleSource = false
reportUndefinedVariable = false
typeCheckingMode = "standard"

[tool.ruff]
src = ["src", "backend", "tests"]
line-length = 150                 # default 88
indent-width = 4

[tool.ruff.lint]
select = ["E501", "I", "F401"]
fixable = ["I", "F401"]

[tool.yamllint.rules]
line-length = { max = 200 }
quoted-strings = "disable"

# [tool.pytest.ini_options]
# addopts = "--tb=long -vv"
